# agent-audio-gateway

./: .gitignore  CHANGELOG.md  README.md  config.default.yaml  pyproject.toml
docs/: api.md  architecture.md  cli.md  configuration.md  quickstart.md  schemas.md  security.md  skill.md
skill/: SKILL.md
skill/references/: cli-usage.md  json-schemas.md  troubleshooting.md
src/agent_audio_gateway/cli/: main.py
src/agent_audio_gateway/core/: _logging.py  config.py  engine.py  exceptions.py  models.py
src/agent_audio_gateway/core/adapters/: base.py
src/agent_audio_gateway/core/adapters/openrouter/: adapter.py
src/agent_audio_gateway/core/aggregation/: aggregator.py
src/agent_audio_gateway/core/inspection/: inspector.py
src/agent_audio_gateway/core/preprocessing/: preprocessor.py
src/agent_audio_gateway/core/segmentation/: segmenter.py
src/agent_audio_gateway/server/: app.py
tests/unit/: test_aggregator.py  test_cli.py  test_config.py  test_engine_prompt_file.py  test_engine_structured_mode.py  test_inspector_path_traversal.py  test_openrouter_adapter.py  test_preprocessor.py  test_preprocessor_invalid_data.py  test_segmenter.py  test_server_app.py  test_server_concurrency.py  test_server_timeout.py
